# CloudSentinel

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
cli/: cloudsentinel.py
docs/: ARCHITECTURE.md  DESIGN_DECISIONS.md  sample_output.md
eval/: harness.py
eval/labeled_findings/: 01_instance_cred_exfil.json  02_cloudtrail_disabled.json  03_crypto_mining.json  04_backdoor_cc.json  05_malicious_ip_caller.json  06_anomalous_discovery.json  07_recon_portscan.json  08_root_cred_usage.json
src/: handler.py  metrics.py
src/analysis/: attack.py  claude_client.py  prompts.py  schema.py  severity_scorer.py  validator.py
src/enrichment/: __init__.py  cloudtrail.py  guardduty.py  iam_context.py
src/output/: degraded.py  report.py  slack_formatter.py
src/security/: dedup.py  sanitizer.py
terraform/: .terraform.lock.hcl  dashboard.tf  dynamodb.tf  eventbridge.tf  guardduty.tf  iam.tf  lambda.tf  layer.tf  main.tf  outputs.tf  s3.tf  secrets.tf  sns.tf  variables.tf
tests/: conftest.py  test_claude_client.py  test_cli.py  test_dedup.py  test_degraded.py  test_enrich.py  test_enrichment_cloudtrail.py  test_enrichment_guardduty.py  test_enrichment_iam.py  test_eval.py  test_handler.py  test_prompts.py  test_report.py  test_sanitizer.py  test_severity_scorer.py  test_slack_formatter.py  test_validator.py
tests/sample_findings/: instance_cred_exfil.json
